--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@types/react-router-dom": "^5.1.9",
     "antd-mobile": "^5.0.0-beta.4",
     "customize-cra": "^1.0.0",
-    "node-sass": "^6.0.1",
+    "node-sass": "^4",
+    "postcss-px2rem-exclude": "^0.0.6",
     "react": "^17.0.2",
     "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.2",
@@ -23,7 +24,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-app-rewired start",
+    "start": "PORT=3001 react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
