--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.9",
     "antd-mobile": "^5.0.0-beta.4",
+    "axios": "^0.21.4",
+    "classnames": "^2.3.1",
     "customize-cra": "^1.0.0",
     "node-sass": "^4",
     "postcss-px2rem-exclude": "^0.0.6",
@@ -20,6 +22,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "svg-parser": "^2.0.4",
+    "ts-node": "^9.1.1",
     "typescript": "^4.4.3",
     "web-vitals": "^1.0.1"
   },
@@ -27,6 +31,7 @@
     "start": "PORT=3001 react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
+    "gen:icon": "ts-node --transpile-only --skip-project ./dev-packages/gen.ts",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
